syntax = "proto3";
package cosmos.base.store.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/cosmos/cosmos-sdk/store/types";

// SnapshotItem is an item contained in a rootmulti.Store snapshot.
message SnapshotItem {
  // item is the specific type of snapshot item.
  oneof item {
    SnapshotStoreItem         store = 1;
    SnapshotIAVLItem          iavl = 2 [(gogoproto.customname) = "IAVL"];
    SnapshotExtensionMeta     extension = 3;
    SnapshotExtensionPayload  extension_payload = 4;
    SnapshotKVItem            kv = 5 [(gogoproto.customname) = "KV"];
    SnapshotSchema            schema = 6;
  }
}


// SnapshotStoreItem contains metadata about a snapshotted store.
message SnapshotStoreItem {
  string name = 1;
}


// SnapshotIAVLItem is an exported IAVL node.
message SnapshotIAVLItem {
  bytes key     = 1;
  bytes value   = 2;
  int64 version = 3;
  int32 height  = 4;
}

message SnapshotSchema{
  repeated bytes keys = 1;
}

message SnapshotKVItem {
  bytes key = 1;
  bytes value = 2;
}

message SnapshotExtensionPayload {
  bytes payload = 1;
}

message SnapshotExtensionMeta {
  string name = 1;
  uint32 format = 2;
}